Fixed error page text alignment

--- a/assets/style/Error.css
+++ b/assets/style/Error.css
@@ -6,6 +6,7 @@
     font-style: italic;
     color: rgb(255, 255, 255);
     font-size: 3rem;
+    text-align: center;
   
 }
 .badsearch {
